# rustitles

./: .gitignore  BUILD_MACOS.md  Cargo.toml  FORK_INFO.md  Info.plist.template  LICENSE  MACOS_PORT_SUMMARY.md  MACOS_TESTING_CHECKLIST.md  README.md  TEST_RESULTS.md  build.rs  buildForMacOS.sh  buildForWindows.ps1  rustitles.rc  rustitles.res
Rustitles.app/Contents/: Info.plist
src/: app.rs  config.rs  data_structures.rs  gui.rs  helper_functions.rs  lib.rs  logging.rs  main.rs  python_manager.rs  settings.rs  subtitle_utils.rs
